--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "title": "PushState",
     "name": "properjs-pushstate",
     "description": "Handles history pushstate/popstate with async option.",
-    "version": "0.1.0",
+    "version": "0.1.2",
     "homepage": "https://github.com/ProperJS/PushState",
     "readmeFilename": "README.md",
     "contributors": [
@@ -27,6 +27,7 @@
     ],
     "main": "PushState",
     "keywords": [
+        "properjs",
         "history",
         "pushstate",
         "popstate"
